syntax = "proto3";
package wormhole_foundation.wormchain.wormhole;

import "wormhole/guardian.proto";
import "wormhole/config.proto";
import "wormhole/replay_protection.proto";
import "wormhole/sequence_counter.proto";
import "wormhole/consensus_guardian_set_index.proto";
// this line is used by starport scaffolding # genesis/proto/import
import "gogoproto/gogo.proto";

option go_package = "github.com/wormhole-foundation/wormchain/x/wormhole/types";

// GenesisState defines the wormhole module's genesis state.
message GenesisState {
  repeated GuardianSet guardianSetList = 1 [(gogoproto.nullable) = false];
  Config config = 2;
  repeated ReplayProtection replayProtectionList = 3 [(gogoproto.nullable) = false];
  repeated SequenceCounter sequenceCounterList = 4 [(gogoproto.nullable) = false];
  ConsensusGuardianSetIndex consensusGuardianSetIndex = 5;
  repeated GuardianValidator guardianValidatorList = 6 [(gogoproto.nullable) = false];
  repeated ValidatorAllowedAddress allowedAddresses = 7 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
